Revision history for perl distribution Mojolicious-Plugin-AssetPack

1.02 Not Released
 - Fix 2 naked subroutines
 - Skip more old tests by default
 - Fix t/sass.t: #919191 != #909090

1.01 2016-04-06T16:10:06+0200
 - Cannot load CSS::Minifier::XS in old code - The module is optional
 - Cannot load JavaScript::Minifier::XS in old code - The module is optional

1.00 2016-04-02T21:26:35+0200
 - Rewrote the module. Breaking changes might occur.
 - Changed from "pre-processors" to "pipes"

0.69 2015-12-02T16:37:36+0100
 - Fix "uninitialized value" warning in Scss.pm line 203 #65
 - Fix fetch() from $app

0.68 2015-09-28T08:28:29+0200
 - Will skip tests unless possible to write to out_dir

0.67 2015-09-27T15:24:23+0200
 - Fix asset can be read-only

0.66 2015-09-27T14:56:56+0200
 - Skip some tests on windows
 - Remove EXPERIMENTAL remark for wildcards in filenames #52
 - Remove EXPERIMENTAL remark from headers()
 - Remove EXPERIMENTAL remark from source_paths()

0.65 2015-09-25T16:55:49+0200
 - Add EXPERIMENTAL fixed mapping between moniker to packed files #64
 - Add EXPERIMENTAL test_app() to ensure all assets are created
 - Change headers() into a method
 - Change out_dir() into a read-only method, as documented
 - Remove EXPERIMENTAL support for reloader.js
 - Remove deprecated preprocessor() method
 - Remove support for in-memory assets #64
 - Fix memory leak

0.64 2015-09-20T11:44:26+0200
 - Add "SHIPPING" section to Cookbook
 - Fix adding custom response headers when assets are already built #55
 - Fix always add newline to JavaScript assets to prevent issues with
   comments
 - Improved logging for in-memory assets
 - Improved error reporting when unable to build assets

0.63 2015-08-29T00:51:29+0200
 - Fix responding 404 when in-memory asset could not be found
 - Add support for custom response headers #55

0.62 2015-08-27T11:40:41-0400
 - Fix @import tracking #62

0.61 2015-08-23T13:34:34+0200
 - Add include_paths() to Scss preprocessor